# server-backup-cli

./: .gitignore  README.md  backup_report.json  list_report.json  pyproject.toml  restore_report.json
.github/workflows/: ci.yml
src/autobackup.egg-info/: PKG-INFO  SOURCES.txt
src/autobackup_pkg/: backup_utils.py  cli.py  config.py  config_loader.py  logger.py  logging_config.py  utils.py
src/autobackup_pkg/commands/: backup.py  list_backups.py  restore.py
src/autobackup_pkg/core/: exceptions.py  integrity.py  lock.py  logger.py  retention.py  utils.py
src/autobackup_pkg/reporting/: report.py
tests/: test_autobackup.py
