[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobackup"
version = "0.1.0"
description = "Python CLI for automated backups"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
autobackup = "autobackup_pkg.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]